eks/deployment-1.yaml
# 1. YAML: Deployment

# Deployment
# controllers/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  labels:
    app: nginx-app-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app-1
  template:
    metadata:
      labels:
        app: nginx-app-1
    spec:
      containers:
      - name: nginx-container-1
        image: ghcr.io/sam3797/hello-world:master-77
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
