eks/deployment.yaml
# 1. YAML: Deployment

# Deployment
# controllers/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: ghcr.io/sam3797/hello-world:master-75
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
