eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
spec:
  selector:
    app: simple-bank-api
  type: LoadBalancer
  ports:
  - nodePort: 31000
    port: 80
    targetPort: 8080
