eks/ingressrule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
     name: app-ingress
     annotations:
          ngnix.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: ngnix
    rules:
    - http:
        paths:
        - path: /home
          pathType: Exact
          backend:
            service:
              name: simple-bank-api-service
              port:
                number: 80
